--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
   <aside class="nav-sidebar">
     <ul>
-      <li class="grey-background"><a onclick="chBackcolor('grey');" href="#">Home</a></li>
-      <li class="red-background"><a onclick="chBackcolor('red');" href="#">Red</a></li>
-      <li class="orange-background"><a onclick="chBackcolor('orange');" href="#">Orange</a></li>
-      <li class="purple-background"><a onclick="chBackcolor('purple');" href="#">Purple</a></li>
-      <li class="green-background"><a onclick="chBackcolor('green');" href="#">Green</a></li>
+      <li class="grey-background" onclick="toggleNav()"><a onclick="chBackcolor('grey');" href="#">Home</a></li>
+      <li class="red-background" onclick="toggleNav()"><a onclick="chBackcolor('red');" href="#">Red</a></li>
+      <li class="orange-background" onclick="toggleNav()"><a onclick="chBackcolor('orange');" href="#">Orange</a></li>
+      <li class="purple-background" onclick="toggleNav()"><a onclick="chBackcolor('purple');" href="#">Purple</a></li>
+      <li class="green-background" onclick="toggleNav()"><a onclick="chBackcolor('green');" href="#">Green</a></li>
     </ul>
   </aside>
 
